# decibelimetro-simples

./: README.md
decibelimetro_simples/: CMakeLists.txt  decibelimetro_simples.c
decibelimetro_simples/inc/: button.h  decibelimetro.h  neopixel.h  ws2818b.pio.h
decibelimetro_simples/src/: decibelimetro.c  neopixel.c
